# nekro-vstack-template

./: .env  .gitignore  CHANGELOG.md  Dockerfile  README.md  build.env  build.spec  pyproject.toml
.cursor/rules/: global.mdc
.github/workflows/: deploy.yml
deploy/: docker-compose.yml
docs/: README.md  deployment.md  release-workflow.md
src/backend/: desktop_launcher.py  main.py  router.py
src/backend/config/: database.py  settings.py
src/backend/core/: sse.py
